--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "eleventy",
     "serve": "eleventy --serve",
+    "dev": "eleventy --serve",
     "deploy": "eleventy && netlify deploy --prod"
   },
   "dependencies": {
