--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ yarn.lock
 
 # Build output
 _site/
-.sass-cache/
 .cache/
 .tmp/
 
@@ -25,7 +24,7 @@ _site/
 *.sw?
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -40,14 +39,15 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
-# Netlify
-.netlify/
-
 # Local development
 .netlify/
 
-# Eleventy cache
+# Build caches
+.sass-cache/
 .cache/
+
+# Local development files
+.local/
 
 # Local development
 *.local
