--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@11ty/eleventy-navigation": "^1.0.4",
     "@11ty/eleventy-plugin-rss": "^2.0.4",
     "@quasibit/eleventy-plugin-sitemap": "^2.2.0",
+    "glob": "^11.0.3",
+    "gray-matter": "^4.0.3",
     "markdown-it-anchor": "^9.2.0"
   }
 }
